Changes for 1.0.3.0

* The following list of bugs were fixed- primarily for AA50 (Comradekev)
	#2554414 Only one Mechanized Infantry per tank should be allowed
	#2554418 Jet Fighters not attacking at 4
	Non-aa50 games throw exceptions when trying to affect Tech Tokens
	Chinese unit max for territory placement not limited to Chinese-only units
	Territory Turn Limit removed from options
	Option added for inclusion of Tech development
	China should be able to place units on newly captured territories
	Added Japanese Inf in Solomon Islands (aa-42)
	Fix null pointer when choosing NOT to attack subs
	Paratroops should be limited to 1 per bomber
	Bombers should not be able to move before picking up paratroops
	Radar/damaged factory icons not displaying
	Fix factory repair cost for Increased Factory Production technology
	#2474056 Captured AA ownership
	#2554411 Rockets allowed to overfly impassables
	#2554412 Rockets firing after Non-Combat move in AA50
	#2554419 Factory repair costs with Enhanced Production technology
	Factories added with edit mode are damaged
	Should allow more than 1 AA in a territory for 4th ed and anniv editions
	Should be able to place in enemy occupied sea zones
	Added stalemate condition for trn -v trn battles
	Low-Luck AA support for RADAR tech
	Mechanized Inf should be able to blitz
	AA hits separated for combined fighter/bomber groups
	
* 2006022 Undo movement jumps back to top of list (Chris McIntosh)

* 1910223 Ability to cancel odds calculator (Chris McIntosh)
	
Changes for 1.0.2.0

* Maps images, and XML for AA50 (Zero Pilot and Black Elk)

* Update game notes (sgb)

* Better error message if no server properties for this version (sgb)

* Mods can now be installed without unzipping anything.  Simply create a zip file with contents that look like any of the folder in maps. (sgb) 

* Add new Game chooser dialog that shows games notes. (sgb)
